--- a/public/locales/data.json
+++ b/public/locales/data.json
@@ -1,8 +1,8 @@
 {
   "en": {
-    "Login.welcome": "Enter your password"
+    "Login.welcome": "Who are you?"
   },
   "pt": {
-    "Login.welcome": "Coloque sua senha"
+    "Login.welcome": "Quem é Você?"
   }
 }
