--- a/public/locales/data.json
+++ b/public/locales/data.json
@@ -1,8 +1,8 @@
 {
   "en": {
-    "Login.welcome": "Who are you?"
+    "Login.welcome": "Enter your password"
   },
   "pt": {
-    "Login.welcome": "Quem é Você?"
+    "Login.welcome": "Coloque sua senha"
   }
 }
